<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Trust badge</string>
    <string name="app_title">Trust badge demo</string>
    <string name="button_text">Start the demo</string>
    <string name="description_text">With trust badge, or Badge de confiance, give transparent information and user control on personal data and help users to identify if your application has any sensitive features.</string>
    <string name="text_more_info_text">More information on:\nhttps://developer.orange.com</string>
    <string name="demo_version">Version 1.0</string>

    <string name="content_description_logo">Application icon</string>

    <string name="custom_badge_1_title">Custom badge 1</string>
    <string name="custom_badge_1_label">This is the description for custom badge 1</string>
    <string name="custom_badge_2_title">Custom badge 2</string>
    <string name="custom_badge_2_label">This is the description for custom badge 2</string>
    <string name="custom_badge_3_title">Custom badge 3</string>
    <string name="custom_badge_3_label">This is the description for custom badge 3</string>

    <!-- Desactivation_dialog -->
    <string name="otb_desactivation_dialog_title_warning">Disable usage data sending</string>
    <string name="otb_desactivation_dialog_message_warning">The collection of usage data is anonymous and essential to improve our services. Are you sure that you want to disable usage data sending ?</string>
    <string name="otb_desactivation_dialog_button_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="otb_desactivation_dialog_button_deactivate">DISABLE</string>

    <!-- terms page -->
    <string name="otb_terms_video_title">Our commitments in video</string>
    <string name="otb_terms_video_content">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>
    <string name="otb_terms_usage_title">How we use your personal data</string>
    <string name="otb_terms_usage_content"><![CDATA[<h2>Personal data sharing</h2><p>We are committed to ensuring the privacy of personal data used by this application. We also prohibit us to communicate with partners personal data without informing you and without offered you the opportunity to exercise your opposition right.</p><h2>Personal data use</h2><p>We use personal data to authenticate you, provide services and, if necessary, propose offers adapted to your needs. We may use personal data, previously anonymized irreversibly, for statistical analysis.</p><h2>Personal data retention</h2>We do not retain your personal data longer than necessary or longer than foreseen by the law.]]></string>
    <string name="otb_terms_help_title">Help</string>
    <string name="otb_terms_help_content"><![CDATA[<p>If necessary, this application provides this email address to answer your questions:</p><a href="mailto:example@example.fr">example@example.fr</a>]]></string>
    <string name="otb_terms_more_info_title">Privacy Policy</string>
    <string name="otb_terms_more_info_content"><![CDATA[Find also all this information in the <a href="link_to_your_privacy_policy.pdf">privacy policy</a> of this application.]]></string>
</resources>